--- a/.github/actions/setup/action.yml
+++ b/.github/actions/setup/action.yml
@@ -7,13 +7,11 @@ runs:
     - name: Setup Node.js
       uses: actions/setup-node@v4
       with:
-        node-version-file: .nvmrc
-        registry-url: https://npm.pkg.github.com
-        scope: '@jamadd'
+        node-version: '20'
+        registry-url: https://registry.npmjs.org
 
-    - name: Setup Yarn NPM registry authentication
-      run: |
-        echo "npmScopes: { jamadd: { npmRegistryServer: 'https://npm.pkg.github.com', npmAlwaysAuth: false, npmAuthToken: '${NODE_AUTH_TOKEN}' } }" >> .yarnrc.yml
+    - name: Update npm
+      run: npm install -g npm@latest
       shell: bash
 
     - name: Restore dependencies
@@ -23,7 +21,7 @@ runs:
         path: |
           **/node_modules
           .yarn/install-state.gz
-        key: ${{ runner.os }}-yarn-${{ hashFiles('yarn.lock') }}-${{ hashFiles('**/package.json', '!node_modules/**') }}
+        key: ${{ runner.os }}-yarn-${{ hashFiles('yarn.lock') }}
         restore-keys: |
           ${{ runner.os }}-yarn-${{ hashFiles('yarn.lock') }}
           ${{ runner.os }}-yarn-
