--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,45 +28,25 @@ jobs:
       - name: Typecheck files
         run: yarn typecheck
 
-  # test:
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - name: Checkout
-  #       uses: actions/checkout@v4
-
-  #     - name: Setup
-  #       uses: ./.github/actions/setup
-
-  #     - name: Run unit tests
-  #       run: yarn test --maxWorkers=2 --coverage
-
   build-package:
     runs-on: ubuntu-latest
     needs: lint
     permissions:
-      contents: read
-      packages: write
+      id-token: write
+      contents: write
     steps:
       - name: Checkout
         uses: actions/checkout@v4
 
       - name: Setup NPM registry authentication & install dependencies
         uses: ./.github/actions/setup
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Build package
         run: npm publish
 
-  # build-web:
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - name: Checkout
-  #       uses: actions/checkout@v4
-
-  #     - name: Setup
-  #       uses: ./.github/actions/setup
-
-  #     - name: Build example for Web
-  #       run: |
-  #         yarn example expo export --platform web
+      - name: Create release
+        run: |
+          echo "Creating release for tag: ${{ github.ref_name }}"
+          gh release create ${{ github.ref_name }} --title "${{ github.ref_name }}" -F ./.github/release/RELEASE_NOTES.md
+        env:
+          GH_TOKEN: ${{ github.token }}
