--- a/package.json
+++ b/package.json
@@ -90,8 +90,10 @@
     "@release-it/conventional-changelog": "^9.0.2",
     "@shopify/flash-list": "^2.0.3",
     "@shopify/restyle": "^2.4.5",
+    "@testing-library/react-native": "^13.3.3",
     "@types/jest": "^29.5.5",
     "@types/react": "^19.1.12",
+    "@types/react-test-renderer": "19.1.0",
     "babel-plugin-react-compiler": "19.1.0-rc.2",
     "commitlint": "^19.6.1",
     "del-cli": "^5.1.0",
@@ -99,15 +101,17 @@
     "eslint-config-prettier": "^10.1.1",
     "eslint-plugin-prettier": "^5.2.3",
     "eslint-plugin-react-compiler": "19.1.0-rc.2",
+    "eslint-plugin-testing-library": "^7.8.0",
     "jest": "^29.7.0",
     "prettier": "^3.0.3",
-    "react": "19.1.1",
+    "react": "19.1.0",
     "react-native": "0.81.1",
     "react-native-builder-bob": "^0.40.11",
     "react-native-gesture-handler": "^2.28.0",
     "react-native-reanimated": "^4.1.0",
     "react-native-safe-area-context": "^5.6.1",
     "react-native-worklets": "^0.5.0",
+    "react-test-renderer": "19.1.0",
     "release-it": "^17.10.0",
     "typescript": "^5.8.3"
   },
@@ -115,7 +119,7 @@
     "@jamadd/react-native-template-icons": ">=0.4.0",
     "@shopify/flash-list": ">=2.0.3",
     "@shopify/restyle": ">=2.4.5",
-    "react": ">=19.1.1",
+    "react": ">=19.1.0",
     "react-native": ">=0.81.1",
     "react-native-gesture-handler": ">=2.28.0",
     "react-native-reanimated": ">=4.1.0",
@@ -128,10 +132,20 @@
   "packageManager": "yarn@3.6.1",
   "jest": {
     "preset": "react-native",
+    "setupFiles": [
+      "<rootDir>/src/test/__mocks__/jestSetup.js",
+      "<rootDir>/node_modules/react-native-gesture-handler/jestSetup.js"
+    ],
+    "transformIgnorePatterns": [
+      "<rootDir>/node_modules/(?!(jest-)?react-native|@react-native|react-native-reanimated)"
+    ],
     "modulePathIgnorePatterns": [
       "<rootDir>/example/node_modules",
       "<rootDir>/lib/"
-    ]
+    ],
+    "moduleNameMapper": {
+      "\\.(ttf)$": "<rootDir>/src/test/__mocks__/file-mock.js"
+    }
   },
   "commitlint": {
     "extends": [
