--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   "scripts": {
     "example": "yarn workspace react-native-template-ui-example",
     "test": "jest",
+    "test-snapshot": "jest --updateSnapshot",
     "typecheck": "tsc",
     "lint": "eslint \"**/*.{js,ts,tsx}\"",
     "clean": "del-cli lib",
