--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "example": "yarn workspace react-native-template-ui-example",
     "test": "jest",
     "test-snapshot": "jest --updateSnapshot",
+    "test-watch": "jest --watch",
     "typecheck": "tsc",
     "lint": "eslint \"**/*.{js,ts,tsx}\"",
     "clean": "del-cli lib",
