--- a/package.json
+++ b/package.json
@@ -86,47 +86,47 @@
     "@eslint/eslintrc": "^3.3.0",
     "@eslint/js": "^9.22.0",
     "@evilmartians/lefthook": "^1.5.0",
-    "@jamadd/react-native-template-icons": "^0.4.0",
-    "@react-native/babel-preset": "0.81.1",
-    "@react-native/eslint-config": "^0.81.1",
+    "@jamadd/react-native-template-icons": "^0.4.2",
+    "@react-native/babel-preset": "0.82.0",
+    "@react-native/eslint-config": "^0.82.0",
     "@release-it/conventional-changelog": "^9.0.2",
-    "@shopify/flash-list": "^2.0.3",
+    "@shopify/flash-list": "^2.1.0",
     "@shopify/restyle": "^2.4.5",
     "@testing-library/react-native": "^13.3.3",
-    "@types/jest": "^29.5.5",
+    "@types/jest": "^29.5.14",
     "@types/react": "^19.1.12",
     "@types/react-test-renderer": "19.1.0",
-    "babel-plugin-react-compiler": "19.1.0-rc.2",
+    "babel-plugin-react-compiler": "1.0.0",
     "commitlint": "^19.6.1",
     "del-cli": "^5.1.0",
     "eslint": "^9.22.0",
     "eslint-config-prettier": "^10.1.1",
     "eslint-plugin-prettier": "^5.2.3",
-    "eslint-plugin-react-compiler": "19.1.0-rc.2",
+    "eslint-plugin-react-compiler": "^19.1.0-rc.2",
     "eslint-plugin-testing-library": "^7.8.0",
     "jest": "^29.7.0",
     "prettier": "^3.0.3",
-    "react": "19.1.0",
-    "react-native": "0.81.1",
+    "react": "19.1.1",
+    "react-native": "0.82.0",
     "react-native-builder-bob": "^0.40.11",
     "react-native-gesture-handler": "^2.28.0",
-    "react-native-reanimated": "^4.1.0",
+    "react-native-reanimated": "^4.1.3",
     "react-native-safe-area-context": "^5.6.1",
-    "react-native-worklets": "^0.5.0",
-    "react-test-renderer": "19.1.0",
+    "react-native-worklets": "^0.6.1",
+    "react-test-renderer": "19.1.1",
     "release-it": "^17.10.0",
     "typescript": "^5.8.3"
   },
   "peerDependencies": {
-    "@jamadd/react-native-template-icons": ">=0.4.0",
-    "@shopify/flash-list": ">=2.0.3",
+    "@jamadd/react-native-template-icons": ">=0.4.2",
+    "@shopify/flash-list": ">=2.1.0",
     "@shopify/restyle": ">=2.4.5",
-    "react": ">=19.1.0",
-    "react-native": ">=0.81.1",
+    "react": ">=19.1.1",
+    "react-native": ">=0.82.0",
     "react-native-gesture-handler": ">=2.28.0",
-    "react-native-reanimated": ">=4.1.0",
+    "react-native-reanimated": ">=4.1.3",
     "react-native-safe-area-context": ">=5.6.1",
-    "react-native-worklets": ">=0.5.0"
+    "react-native-worklets": ">=0.6.1"
   },
   "workspaces": [
     "example"
