--- a/example/package.json
+++ b/example/package.json
@@ -3,31 +3,30 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "expo start -c",
-    "android": "expo run:android",
-    "ios": "expo run:ios",
+    "start": "expo start",
+    "android": "expo start --android",
+    "ios": "expo start --ios",
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/metro-runtime": "~6.1.0",
+    "@expo/metro-runtime": "~6.1.2",
     "@jamadd/react-native-template-icons": "^0.4.2",
     "@shopify/flash-list": "2.1.0",
     "@shopify/restyle": "^2.4.5",
-    "expo": "~54.0.0-preview.6",
-    "expo-status-bar": "~3.0.3",
+    "expo": "~54.0.25",
+    "expo-status-bar": "~3.0.8",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "react-native": "0.81.1",
+    "react-native": "0.81.5",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-reanimated": "~4.1.3",
     "react-native-safe-area-context": "5.6.1",
     "react-native-web": "~0.21.1",
     "react-native-worklets": "^0.6.1"
   },
+  "private": true,
   "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "react-native-builder-bob": "^0.40.11",
+    "react-native-builder-bob": "^0.40.16",
     "react-native-monorepo-config": "^0.1.9"
-  },
-  "private": true
+  }
 }
