--- a/package.json
+++ b/package.json
@@ -2,21 +2,15 @@
   "name": "@jamadd/react-native-template-ui",
   "version": "0.2.1",
   "description": "React Native Template UI is a collection of UI components designed by JaMa D&D.",
-  "source": "./src/index.ts",
-  "main": "./lib/commonjs/index.js",
-  "module": "./lib/module/index.js",
-  "types": "./lib/typescript/commonjs/src/index.d.ts",
+  "main": "./lib/module/index.js",
+  "types": "./lib/typescript/src/index.d.ts",
   "exports": {
     ".": {
-      "import": {
-        "types": "./lib/typescript/module/src/index.d.ts",
-        "default": "./lib/module/index.js"
-      },
-      "require": {
-        "types": "./lib/typescript/commonjs/src/index.d.ts",
-        "default": "./lib/commonjs/index.js"
-      }
-    }
+      "source": "./src/index.ts",
+      "types": "./lib/typescript/src/index.d.ts",
+      "default": "./lib/module/index.js"
+    },
+    "./package.json": "./package.json"
   },
   "files": [
     "lib",
@@ -81,15 +75,14 @@
     "access": "public"
   },
   "devDependencies": {
-    "@commitlint/config-conventional": "^19.6.0",
-    "@eslint/compat": "^1.2.7",
-    "@eslint/eslintrc": "^3.3.0",
-    "@eslint/js": "^9.22.0",
+    "@eslint/compat": "^1.3.2",
+    "@eslint/eslintrc": "^3.3.1",
+    "@eslint/js": "^9.35.0",
     "@evilmartians/lefthook": "^1.5.0",
     "@jamadd/react-native-template-icons": "^0.4.2",
     "@react-native/babel-preset": "0.82.0",
     "@react-native/eslint-config": "^0.82.0",
-    "@release-it/conventional-changelog": "^9.0.2",
+    "@release-it/conventional-changelog": "^10.0.1",
     "@shopify/flash-list": "^2.2.0",
     "@shopify/restyle": "^2.4.5",
     "@testing-library/react-native": "^13.3.3",
@@ -97,25 +90,24 @@
     "@types/react": "^19.1.12",
     "@types/react-test-renderer": "19.1.0",
     "babel-plugin-react-compiler": "1.0.0",
-    "commitlint": "^19.6.1",
-    "del-cli": "^5.1.0",
-    "eslint": "^9.22.0",
-    "eslint-config-prettier": "^10.1.1",
-    "eslint-plugin-prettier": "^5.2.3",
+    "del-cli": "^6.0.0",
+    "eslint": "^9.35.0",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-prettier": "^5.5.4",
     "eslint-plugin-react-compiler": "^19.1.0-rc.2",
     "eslint-plugin-testing-library": "^7.8.0",
     "jest": "^29.7.0",
     "prettier": "^3.0.3",
     "react": "19.1.1",
     "react-native": "0.82.0",
-    "react-native-builder-bob": "^0.40.11",
+    "react-native-builder-bob": "^0.40.16",
     "react-native-gesture-handler": "^2.28.0",
     "react-native-reanimated": "^4.1.3",
     "react-native-safe-area-context": "^5.6.1",
     "react-native-worklets": "^0.6.1",
     "react-test-renderer": "19.1.1",
-    "release-it": "^17.10.0",
-    "typescript": "^5.8.3"
+    "release-it": "^19.0.4",
+    "typescript": "^5.9.2"
   },
   "peerDependencies": {
     "@jamadd/react-native-template-icons": ">=0.4.2",
@@ -131,27 +123,30 @@
   "workspaces": [
     "example"
   ],
-  "packageManager": "yarn@3.6.1",
-  "jest": {
-    "preset": "react-native",
-    "setupFiles": [
-      "<rootDir>/src/test/__mocks__/jestSetup.js",
-      "<rootDir>/node_modules/react-native-gesture-handler/jestSetup.js"
-    ],
-    "transformIgnorePatterns": [
-      "<rootDir>/node_modules/(?!(jest-)?react-native|@react-native|react-native-reanimated)"
-    ],
-    "modulePathIgnorePatterns": [
-      "<rootDir>/example/node_modules",
-      "<rootDir>/lib/"
-    ],
-    "moduleNameMapper": {
-      "\\.(ttf)$": "<rootDir>/src/test/__mocks__/file-mock.js"
-    }
+  "packageManager": "yarn@4.11.0",
+  "prettier": {
+    "quoteProps": "consistent",
+    "singleQuote": true,
+    "tabWidth": 2,
+    "trailingComma": "es5",
+    "useTabs": false
   },
-  "commitlint": {
-    "extends": [
-      "@commitlint/config-conventional"
+  "react-native-builder-bob": {
+    "source": "src",
+    "output": "lib",
+    "targets": [
+      [
+        "module",
+        {
+          "esm": true
+        }
+      ],
+      [
+        "typescript",
+        {
+          "project": "tsconfig.build.json"
+        }
+      ]
     ]
   },
   "release-it": {
@@ -173,37 +168,26 @@
       }
     }
   },
-  "prettier": {
-    "quoteProps": "consistent",
-    "singleQuote": true,
-    "tabWidth": 2,
-    "trailingComma": "es5",
-    "useTabs": false
+  "jest": {
+    "preset": "react-native",
+    "setupFiles": [
+      "<rootDir>/src/test/__mocks__/jestSetup.js",
+      "<rootDir>/node_modules/react-native-gesture-handler/jestSetup.js"
+    ],
+    "transformIgnorePatterns": [
+      "<rootDir>/node_modules/(?!(jest-)?react-native|@react-native|react-native-reanimated)"
+    ],
+    "modulePathIgnorePatterns": [
+      "<rootDir>/example/node_modules",
+      "<rootDir>/lib/"
+    ],
+    "moduleNameMapper": {
+      "\\.(ttf)$": "<rootDir>/src/test/__mocks__/file-mock.js"
+    }
   },
-  "react-native-builder-bob": {
-    "source": "src",
-    "output": "lib",
-    "targets": [
-      [
-        "commonjs",
-        {
-          "esm": true,
-          "configFile": true
-        }
-      ],
-      [
-        "module",
-        {
-          "esm": true,
-          "configFile": true
-        }
-      ],
-      [
-        "typescript",
-        {
-          "project": "tsconfig.build.json"
-        }
-      ]
+  "commitlint": {
+    "extends": [
+      "@commitlint/config-conventional"
     ]
   },
   "create-react-native-library": {
