--- a/example/package.json
+++ b/example/package.json
@@ -4,8 +4,8 @@
   "main": "index.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
@@ -13,16 +13,16 @@
     "@jamadd/react-native-template-icons": "^0.4.2",
     "@shopify/flash-list": "2.2.0",
     "@shopify/restyle": "^2.4.5",
-    "expo": "~54.0.25",
+    "expo": "canary",
     "expo-status-bar": "~3.0.8",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "react-native": "0.81.5",
+    "react": "19.1.1",
+    "react-dom": "19.1.1",
+    "react-native": "0.82.1",
     "react-native-gesture-handler": "~2.28.0",
-    "react-native-reanimated": "~4.1.3",
-    "react-native-safe-area-context": "5.6.1",
+    "react-native-reanimated": "~4.2.0",
+    "react-native-safe-area-context": "5.6.2",
     "react-native-web": "~0.21.1",
-    "react-native-worklets": "^0.6.1"
+    "react-native-worklets": "^0.7.1"
   },
   "private": true,
   "devDependencies": {
